Fetch Count on Card - Modified to the new workflow