@@ -2,8 +2,8 @@ package in.gov.abdm.nmr.service.impl;
 
 import in.gov.abdm.nmr.dto.FetchCountOnCardResponseTO;
 import in.gov.abdm.nmr.dto.StatusWiseCountTO;
-import in.gov.abdm.nmr.enums.UserSubTypeEnum;
-import in.gov.abdm.nmr.enums.UserTypeEnum;
+import in.gov.abdm.nmr.enums.ApplicationType;
+import in.gov.abdm.nmr.enums.Group;
 import in.gov.abdm.nmr.exception.InvalidRequestException;
 import in.gov.abdm.nmr.mapper.IStatusWiseCountMapper;
 import in.gov.abdm.nmr.repository.IFetchCountOnCardRepository;
@@ -14,6 +14,7 @@ import org.springframework.stereotype.Service;
 import java.math.BigInteger;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static in.gov.abdm.nmr.util.NMRConstants.*;
 
@@ -35,179 +36,138 @@ public class FetchCountOnCardServiceImpl implements IFetchCountOnCardService {
     @Autowired
     private IStatusWiseCountMapper iStatusWiseCountMapper;
 
+    private BigInteger counter=BigInteger.ZERO;
+
     @Override
-    public FetchCountOnCardResponseTO fetchCountOnCard(String userType, String userSubType) throws InvalidRequestException {
-
-        if(userSubType!=null){
-            validateUserSubType(userSubType);
-            return fetchCountOnCardByUserTypeAndSubType(userType, userSubType);
-        }
-        validateUserType(userType);
-        return fetchCountOnCardByUserType(userType);
-
+    public FetchCountOnCardResponseTO fetchCountOnCard(String groupName) throws InvalidRequestException {
+        validateGroupName(groupName);
+        return fetchCountOnCardByGroupId(fetchGroupIdByGroupName(groupName));
     }
 
-    private FetchCountOnCardResponseTO fetchCountOnCardByUserTypeAndSubType(String userType, String userSubType){
+    private FetchCountOnCardResponseTO fetchCountOnCardByGroupId(BigInteger groupId){
 
         /**
-         * Data retrieval - Registration
+         * Data retrieval - HP Registration
          */
-        List<StatusWiseCountTO> registrationRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserTypeAndSubType(REGISTRATION, userType, userSubType)
+        List<StatusWiseCountTO> hpRegistrationRequests= iFetchCountOnCardRepository.fetchStatusWiseCountByGroupAndApplicationType(ApplicationType.HP_REGISTRATION.getId(), groupId)
                 .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
+                .map(statusWiseCount-> {
+                    counter=counter.add(statusWiseCount.getCount());
+                    return iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount);
+                })
+                .collect(Collectors.toList());
 
-        registrationRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_REGISTRATION_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserTypeAndSubType(REGISTRATION, userType, userSubType).size()))
+        hpRegistrationRequests.add(StatusWiseCountTO.builder()
+                .name(TOTAL_HP_REGISTRATION_REQUESTS)
+                .count(counter)
                 .build());
 
         /**
-         * Data retrieval - Updation
+         * Data retrieval - HP Modification
          */
-        List<StatusWiseCountTO> updationRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserTypeAndSubType(UPDATION, userType, userSubType)
+        counter=BigInteger.ZERO;
+        List<StatusWiseCountTO> hpModificationRequests= iFetchCountOnCardRepository.fetchStatusWiseCountByGroupAndApplicationType(ApplicationType.HP_MODIFICATION.getId(), groupId)
                 .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
+                .map(statusWiseCount-> {
+                    counter=counter.add(statusWiseCount.getCount());
+                    return iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount);
+                })
+                .collect(Collectors.toList());
 
-        updationRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_UPDATION_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserTypeAndSubType(UPDATION, userType, userSubType).size()))
+        hpModificationRequests.add(StatusWiseCountTO.builder()
+                .name(TOTAL_HP_MODIFICATION_REQUESTS)
+                .count(counter)
                 .build());
 
         /**
-         * Data retrieval - Suspension
+         * Data retrieval - Temporary Suspension
          */
-        List<StatusWiseCountTO> suspensionRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserTypeAndSubType(SUSPENSION, userType, userSubType)
+        counter=BigInteger.ZERO;
+        List<StatusWiseCountTO> temporarySuspensionRequests= iFetchCountOnCardRepository.fetchStatusWiseCountByGroupAndApplicationType(ApplicationType.HP_TEMPORARY_SUSPENSION.getId(), groupId)
                 .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
+                .map(statusWiseCount-> {
+                    counter=counter.add(statusWiseCount.getCount());
+                    return iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount);
+                })
+                .collect(Collectors.toList());
 
-        suspensionRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_SUSPENSION_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserTypeAndSubType(SUSPENSION, userType, userSubType).size()))
+        temporarySuspensionRequests.add(StatusWiseCountTO.builder()
+                .name(TOTAL_TEMPORARY_SUSPENSION_REQUESTS)
+                .count(counter)
                 .build());
 
         /**
-         * Data retrieval - Black-List
+         * Data retrieval - Permanent Suspension
          */
-        List<StatusWiseCountTO> blackListRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserTypeAndSubType(BLACK_LIST, userType, userSubType)
+        counter=BigInteger.ZERO;
+        List<StatusWiseCountTO> permanentSuspensionRequests= iFetchCountOnCardRepository.fetchStatusWiseCountByGroupAndApplicationType(ApplicationType.HP_PERMANENT_SUSPENSION.getId(), groupId)
                 .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
+                .map(statusWiseCount-> {
+                    counter=counter.add(statusWiseCount.getCount());
+                    return iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount);
+                })
+                .collect(Collectors.toList());
 
-        blackListRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_BLACK_LIST_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserTypeAndSubType(BLACK_LIST, userType, userSubType).size()))
+        permanentSuspensionRequests.add(StatusWiseCountTO.builder()
+                .name(TOTAL_PERMANENT_SUSPENSION_REQUESTS)
+                .count(counter)
                 .build());
 
         /**
-         * Data retrieval - Voluntary Retirement
+         * Data retrieval - Activate License
          */
-        List<StatusWiseCountTO> voluntaryRetirementRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserTypeAndSubType(VOLUNTARY_RETIREMENT, userType, userSubType)
+        counter=BigInteger.ZERO;
+        List<StatusWiseCountTO> activateLicenseRequests= iFetchCountOnCardRepository.fetchStatusWiseCountByGroupAndApplicationType(ApplicationType.HP_ACTIVATE_LICENSE.getId(), groupId)
                 .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
+                .map(statusWiseCount-> {
+                    counter=counter.add(statusWiseCount.getCount());
+                    return iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount);
+                })
+                .collect(Collectors.toList());
 
-        voluntaryRetirementRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_VOLUNTARY_RETIREMENT_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserTypeAndSubType(VOLUNTARY_RETIREMENT, userType, userSubType).size()))
+        activateLicenseRequests.add(StatusWiseCountTO.builder()
+                .name(TOTAL_ACTIVATE_LICENSE_REQUESTS)
+                .count(counter)
+                .build());
+
+        /**
+         * Data retrieval - College Registration
+         */
+        counter=BigInteger.ZERO;
+        List<StatusWiseCountTO> collegeRegistrationRequests= iFetchCountOnCardRepository.fetchStatusWiseCountByGroupAndApplicationType(ApplicationType.COLLEGE_REGISTRATION.getId(), groupId)
+                .stream()
+                .map(statusWiseCount-> {
+                    counter=counter.add(statusWiseCount.getCount());
+                    return iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount);
+                })
+                .collect(Collectors.toList());
+
+        collegeRegistrationRequests.add(StatusWiseCountTO.builder()
+                .name(TOTAL_COLLEGE_REGISTRATION_REQUESTS)
+                .count(counter)
                 .build());
 
         return FetchCountOnCardResponseTO.builder()
-                .registrationRequests(registrationRequests)
-                .updationRequests(updationRequests)
-                .suspensionRequests(suspensionRequests)
-                .blackListRequests(blackListRequests)
-                .voluntaryRetirementRequests(voluntaryRetirementRequests)
+                .hpRegistrationRequests(hpRegistrationRequests)
+                .hpModificationRequests(hpModificationRequests)
+                .temporarySuspensionRequests(temporarySuspensionRequests)
+                .permanentSuspensionRequests(permanentSuspensionRequests)
+                .activateLicenseRequests(activateLicenseRequests)
+                .collegeRegistrationRequests(collegeRegistrationRequests)
                 .build();
     }
 
-    private FetchCountOnCardResponseTO fetchCountOnCardByUserType(String userType){
-
-        /**
-         * Data retrieval - Registration
-         */
-        List<StatusWiseCountTO> registrationRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserType(REGISTRATION, userType)
-                .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
-
-        registrationRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_REGISTRATION_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserType(REGISTRATION, userType).size()))
-                .build());
-
-        /**
-         * Data retrieval - Updation
-         */
-        List<StatusWiseCountTO> updationRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserType(UPDATION, userType)
-                .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
-
-        updationRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_UPDATION_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserType(UPDATION, userType).size()))
-                .build());
-
-        /**
-         * Data retrieval - Suspension
-         */
-        List<StatusWiseCountTO> suspensionRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserType(SUSPENSION, userType)
-                .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
-
-        suspensionRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_SUSPENSION_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserType(SUSPENSION, userType).size()))
-                .build());
-
-        /**
-         * Data retrieval - Black-List
-         */
-        List<StatusWiseCountTO> blackListRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserType(BLACK_LIST, userType)
-                .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
-
-        blackListRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_BLACK_LIST_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserType(BLACK_LIST, userType).size()))
-                .build());
-
-        /**
-         * Data retrieval - Voluntary Retirement
-         */
-        List<StatusWiseCountTO> voluntaryRetirementRequests= iFetchCountOnCardRepository.fetchHpStatusWiseCountByAppStatusAndUserType(VOLUNTARY_RETIREMENT, userType)
-                .stream()
-                .map(statusWiseCount-> iStatusWiseCountMapper.toStatusWiseCountTO(statusWiseCount))
-                .toList();
-
-        voluntaryRetirementRequests.add(StatusWiseCountTO.builder()
-                .name(TOTAL_VOLUNTARY_RETIREMENT_REQUESTS)
-                .count(BigInteger.valueOf(iFetchCountOnCardRepository.fetchTotalCountByAppStatusAndUserType(VOLUNTARY_RETIREMENT, userType).size()))
-                .build());
-
-        return FetchCountOnCardResponseTO.builder()
-                .registrationRequests(registrationRequests)
-                .updationRequests(updationRequests)
-                .suspensionRequests(suspensionRequests)
-                .blackListRequests(blackListRequests)
-                .voluntaryRetirementRequests(voluntaryRetirementRequests)
-                .build();
-    }
-
-    private void validateUserSubType(String userSubType) throws InvalidRequestException {
-        if(Arrays.stream(UserSubTypeEnum.values()).noneMatch(t -> t.getName().equals(userSubType))){
-            throw new InvalidRequestException(INVALID_USER_SUB_TYPE);
+    private void validateGroupName(String groupName) throws InvalidRequestException {
+       if(groupName==null || Arrays.stream(Group.values()).noneMatch(t -> t.getDescription().equals(groupName))){
+            throw new InvalidRequestException(INVALID_GROUP);
         }
     }
 
-    private void validateUserType(String userType) throws InvalidRequestException {
-       if(userType==null || Arrays.stream(UserTypeEnum.values()).noneMatch(t -> t.getName().equals(userType))){
-            throw new InvalidRequestException(INVALID_USER_TYPE);
-        }
+    private BigInteger fetchGroupIdByGroupName(String groupName) {
+        return Arrays.stream(Group.values())
+                .filter(t->t.getDescription().equals(groupName))
+                .findAny()
+                .get()
+                .getId();
     }
 }
